Bug 1120313 - Fix nested ruby inside ruby annotation. r=dbaron